fix: images no longer overflow on small screens

--- a/src/pages/ProjectPage/ProjectPage.css
+++ b/src/pages/ProjectPage/ProjectPage.css
@@ -143,7 +143,7 @@
     #project-page-section-divider {
         display: none;
     }
-    .project-page-image {
+    .project-page-image, .project-page-images > a {
         min-width: 85vw;
     }
 }
